Testing/MatrixClassTests/solveLocally/Debug/com_solveLocally.txt
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Domain/Domain_initDomain.o Domain/Domain_initDomain.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_declarations.o Global/Global_declarations.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_destroyGlobals.o Global/Global_destroyGlobals.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_initGlobals.o Global/Global_initGlobals.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o Global/Global_setupBuffers.o Global/Global_setupBuffers.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o User/User_initFieldsWithZero.o User/User_initFieldsWithZero.cpp
g++ -O3 -DNDEBUG -std=c++11 -I.   -c -o User/User_main.o User/User_main.cpp
User/User_main.cpp: In function ‘int main(int, char**)’:
User/User_main.cpp:4:35: error: ‘i1’ was not declared in this scope
  std::cout << fieldData_u[6][((65*i1)+i0)] << " " << std::endl;
                                   ^~
User/User_main.cpp:4:35: note: suggested alternative: ‘y1’
  std::cout << fieldData_u[6][((65*i1)+i0)] << " " << std::endl;
                                   ^~
                                   y1
User/User_main.cpp:4:39: error: ‘i0’ was not declared in this scope
  std::cout << fieldData_u[6][((65*i1)+i0)] << " " << std::endl;
                                       ^~
User/User_main.cpp:4:39: note: suggested alternative: ‘y0’
  std::cout << fieldData_u[6][((65*i1)+i0)] << " " << std::endl;
                                       ^~
                                       y0
<builtin>: recipe for target 'User/User_main.o' failed
make: *** [User/User_main.o] Error 1
